syntax = "proto3";

package pms;

option go_package = "./pms";

message SaveOrUpdateCategoryReq {
  int64    id = 1;
  int64    parent_id = 2;
  string  name = 3;
  string    status = 4;
  int64    sort = 5;
  string  icon = 6;
  string  desc = 7;
}
message SaveOrUpdateCategoryResp {
  string pong = 1;
}
//删除分类
message CategoryDeleteReq {
  repeated int64 ids = 1;
}
message CategoryDeleteResp {
  string pong = 1;
}

//分类列表
message CategoryListReq {
  int64 page_num = 1;
  int64 page_size = 2;
  string name = 3;
  int64 parent_id = 4;
}
message CategoryListData{
  int64    id = 1;
  int64    parent_id = 2;
  string  name = 3;
  string    status = 4;
  int64    sort = 5;
  string  icon = 6;
  string  desc = 7;
  string  created_at = 8;
}
message CategoryListResp {
  int64 total = 1;
  repeated  CategoryListData list = 2;
}

//添加商家申请
message  MerchantsApplyAddReq{
  string principal_name=1;
  string principal_phone=2;
  string id_card_front=3;
  string id_card_reverse=4;
  string name=5;
  string address=6;
  string pic=7;
  string type=9;
  string status=10;
  string remark=13;
}
message  MerchantsApplyAddResp{
  string pong=1;
}
//审核入驻申请
message  MerchantsApplyUpdateReq{
  int64 id=1;
  string status=8;
  string auditor=9;
  string approval_time=10;
  string admin_remark=11;
}
message  MerchantsApplyUpdateResp{
  string pong = 1;
}
// 删除入驻申请
message  MerchantsApplyDeleteReq{
  repeated int64  IDs=1;
}
message  MerchantsApplyDeleteResp{
  string pong = 1;
}
message MerchantsApplyListReq {
  int64 page_num = 1;
  int64 page_size = 2;
  string name=3;
  string status=4;
  string type=5;
}

message  MerchantApplysListData {
  int64 id=1;
  string principal_name=2;
  string principal_phone=3;
  string id_card_front=4;
  string id_card_reverse=5;
  string name=6;
  string address=7;
  string pic=8;
  string type=9;
  string status=10;
  string auditor=11;
  string approval_time=12;
  string remark=13;
  string admin_remark=14;
  string created_at=15;
}
message MerchantsApplyListResp{
  int64 total = 1;
  repeated  MerchantApplysListData list = 2;
}

//商家列表
message MerchantsListReq {
  int64 page_num = 1;
  int64 page_size = 2;
  string name=3;
  string address = 4;
  string principal_phone = 5;
  string principal_name =6;
}
message  MerchantsListData {
  int64 id=1;
  string name=2;
  string principal_name=3;
  string principal_phone=4;
  string address=5;
  string pic=6;
  int64 user_id=7;
  UserInfoFF user=8;
}
message UserInfoFF{
  int64 id = 1;
  string username =2;
  string phone=3;
  string nickname=4;
  string gender=5;
  string avatar=6;
  string email=7;
  string status=8;
  string created_at=13;
}
message MerchantsListResp{
  int64 total = 1;
  repeated  MerchantsListData list = 2;
}

//更新商家
message  MerchantsUpdateReq{
  int64 id=1;
  string name=2;
  string principal_name=3;
  string principal_phone=4;
  string address=5;
  string pic=6;
}
message  MerchantsUpdateResp{
  string pong = 1;
}
// 删除商家
message  MerchantsDeleteReq{
  repeated int64  IDs=1;
}
message  MerchantsDeleteResp{
  string pong = 1;
}
//商家详情
message  MerchantsInfoReq{
  int64  id=1;
}
message  MerchantsInfoResp{
  int64 id=1;
  string name=2;
  string principal_name=3;
  string principal_phone=4;
  string address=5;
  string pic=6;
  MerchantApplysListData  merchants_apply_info=7;
}



//商家列表
message PlaceListReq {
  int64 page_num = 1;
  int64 page_size = 2;
  string name=3;
  string address = 4;
  string principal_phone = 5;
  string principal_name =6;
}
message  PlaceListData {
  int64 id=1;
  string name=2;
  string principal_name=3;
  string principal_phone=4;
  string address=5;
  string pic=6;
  int64 user_id=7;
  UserInfoFF user=8;
}
message PlaceListResp{
  int64 total = 1;
  repeated  PlaceListData list = 2;
}
//更新
message  PlaceUpdateReq{
  int64 id=1;
  string name=2;
  string principal_name=3;
  string principal_phone=4;
  string address=5;
  string pic=6;
}
message  PlaceUpdateResp{
  string pong = 1;
}
// 删除
message  PlaceDeleteReq{
  repeated int64  IDs=1;
}
message  PlaceDeleteResp{
  string pong = 1;
}
//详情
message  PlaceInfoReq{
  int64  id=1;
}
message  PlaceInfoResp{
  int64 id=1;
  string name=2;
  string principal_name=3;
  string principal_phone=4;
  string address=5;
  string pic=6;
  MerchantApplysListData  merchants_apply_info=7;
}


//更新商品
message SaveOrUpdateProductReq {
  int64       id = 1;
  int64       category_id = 2;
  int64       merchant_id = 3;
  string      name = 6;
  string      pic = 7;
  string      product_sn = 8;
  string      desc = 9;
  double      price = 10;
  double      original_prices = 11;
  string      is_published = 12;
  string      is_hot = 13;
  repeated Size size=20;
  repeated string img_url =31;
  repeated string introduce_img_url =32;
}
message Size {
  string name=1;
  string value=2;
}
message SaveOrUpdateProductResp {
  string pong = 1;
}
//删除商品
message ProductDeleteReq {
  repeated int64 ids = 1;
}
message ProductDeleteResp {
  string pong = 1;
}
//商品列表
message ProductListReq {
  int64 page_num = 1;
  int64 page_size = 2;
  string name = 3;
  int64 category_id=4;
  int64 merchant_id=5;
  int64 min_price=16; //最低价钱
  int64 max_price=7;//最高价钱
  int64 search_type=8; //1->最新发布 2->销量 3->点击数 4->价格低-高 5->价格高-低s
}
message ProductListData{
  int64       id = 1;
  int64       category_id = 2;
  int64       merchant_id = 3;
  string      name = 6;
  string      pic = 7;
  string      product_sn = 8;
  string      desc = 9;
  double      price = 10;
  double      original_prices = 11;
  string      is_published = 12;
  string      is_hot = 13;
}
message ProductListResp {
  int64 total = 1;
  repeated  ProductListData list = 2;
}
//查询商品详情
message ProductInfoReq{
  int64 ID =1;
}
message ProductInfoResp{
  ProductListData product_info=1;
  repeated string img_url =2;
  repeated string introduce_img_url =3;
  repeated Size size =4;
  repeated SkuListData sku_list =5;
}
message SkuListData{
  int64       id=1;
  int64       product_id = 3;
  string      name = 6;
  string      pic = 7;
  string      sku_sn = 8;
  string      desc = 21;
  double      price = 22;
  int64       stock = 16;
  int64       Sale = 17;
  string      tag=14;
  int64       merchant_id = 107;
}
service Pms {
  //添加||更新分类
  rpc SaveOrUpdateCategory(SaveOrUpdateCategoryReq) returns(SaveOrUpdateCategoryResp);
  //分类列表
  rpc CategoryList(CategoryListReq) returns(CategoryListResp);
  //删除分类
  rpc CategoryDelete(CategoryDeleteReq) returns(CategoryDeleteResp);

  //入驻申请
  rpc MerchantsApplyAdd(MerchantsApplyAddReq) returns(MerchantsApplyAddResp);
  //入驻申请列表
  rpc MerchantsApplyList(MerchantsApplyListReq) returns(MerchantsApplyListResp);
  //审核入驻申请
  rpc MerchantsApplyUpdate(MerchantsApplyUpdateReq) returns(MerchantsApplyUpdateResp);
  //删除入驻申请
  rpc MerchantsApplyDelete(MerchantsApplyDeleteReq) returns(MerchantsApplyDeleteResp);

  //商家列表
  rpc MerchantsList(MerchantsListReq) returns(MerchantsListResp);
  //更新商家
  rpc MerchantsUpdate(MerchantsUpdateReq) returns(MerchantsUpdateResp);
  //删除商家
  rpc MerchantsDelete(MerchantsDeleteReq) returns(MerchantsDeleteResp);
  //商家详情
  rpc MerchantsInfo(MerchantsInfoReq) returns(MerchantsInfoResp);


  //自提点列表
  rpc PlaceList(PlaceListReq) returns(PlaceListResp);
  //更新自提点
  rpc PlaceUpdate(PlaceUpdateReq) returns(PlaceUpdateResp);
  //删除自提点
  rpc PlaceDelete(PlaceDeleteReq) returns(PlaceDeleteResp);
  //自提点详情
  rpc PlaceInfo(PlaceInfoReq) returns(PlaceInfoResp);


  //添加||更新商品
  rpc SaveOrUpdateProduct(SaveOrUpdateProductReq) returns(SaveOrUpdateProductResp);
  //商品列表
  rpc ProductList(ProductListReq) returns(ProductListResp);
  //删除商品
  rpc ProductDelete(ProductDeleteReq) returns(ProductDeleteResp);
  //查询商品详情
  rpc ProductInfo(ProductInfoReq) returns(ProductInfoResp);
}